--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -24,3 +24,7 @@
     color: t($text);
   }
 }
+
+.row{
+  --bs-gutter-x: 0 !important;
+}
